--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,12 +6,12 @@
 - clean: ['~']
 
 - link:
-    ~/.dircolors: dircolors
-    ~/.config/gtk-3.0/settings.ini: gtk-3.0.ini
-    ~/.gtkrc-2.0: gtkrc-2.0
-    ~/.config/i3/config: i3
-    ~/.i3blocks.conf: i3blocks.conf
-    ~/.config/termite/config: termite
+    ~/.dircolors: terminal/dircolors
+    ~/.config/gtk-3.0/settings.ini: gtk/gtk-3.0.ini
+    ~/.gtkrc-2.0: gtk/gtkrc-2.0
+    ~/.config/i3/config: i3/i3
+    ~/.i3blocks.conf: i3/i3blocks.conf
+    ~/.config/termite/config: terminal/termite
     ~/.xinitrc: xinitrc
-    ~/.zshrc: zshrc
-    ~/.config/nvim/init.vim: init.vim
+    ~/.zshrc: terminal/zshrc
+    ~/.config/nvim/init.vim: neovim/init.vim
