--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,15 +3,15 @@
         relink: true
         create: true
 
-- clean: ['~']
+- clean: ['$HOME']
 
 - link:
-    ~/.dircolors: terminal/dircolors
-    ~/.config/gtk-3.0/settings.ini: gtk/gtk-3.0.ini
-    ~/.gtkrc-2.0: gtk/gtkrc-2.0
-    ~/.config/i3/config: i3/i3
-    ~/.i3blocks.conf: i3/i3blocks.conf
-    ~/.config/termite/config: terminal/termite
-    ~/.xinitrc: xinitrc
-    ~/.zshrc: terminal/zshrc
-    ~/.config/nvim/init.vim: neovim/init.vim
+    $HOME/.dircolors: terminal/dircolors
+    $HOME/.config/gtk-3.0/settings.ini: gtk/gtk-3.0.ini
+    $HOME/.gtkrc-2.0: gtk/gtkrc-2.0
+    $HOME/.config/i3/config: i3/i3
+    $HOME/.i3blocks.conf: i3/i3blocks.conf
+    $HOME/.config/termite/config: terminal/termite
+    $HOME/.xinitrc: xinitrc
+    $HOME/.zshrc: terminal/zshrc
+    $HOME/.config/nvim/init.vim: neovim/init.vim
