--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,3 +15,4 @@
     $HOME/.xinitrc: xinitrc
     $HOME/.zshrc: terminal/zshrc
     $HOME/.config/nvim/init.vim: neovim/init.vim
+    $HOME/.Xresources: Xresources
