--- a/gtk/gtk-3.0.ini
+++ b/gtk/gtk-3.0.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Darker
-gtk-icon-theme-name=Numix
-gtk-font-name=System San Fransisco Display 10
+gtk-icon-theme-name=Arc
+gtk-font-name=Hack 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
