add nvim/plugins & better commenting options

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
     $HOME/.config/nvim/plugin.vim: nvim/plugin.vim
     $HOME/.config/nvim/style.vim: nvim/style.vim
     $HOME/.config/nvim/languages: nvim/languages
+    $HOME/.config/nvim/plugins: nvim/plugins
     $HOME/.config/nvim/snips: nvim/snips
     $HOME/.Xresources: Xresources
     $HOME/.config/zathura/zathurarc: zathurarc
