--- a/wm/i3blocks.conf
+++ b/wm/i3blocks.conf
@@ -39,12 +39,22 @@ label=♪
 instance=Master
 #instance=PCM
 interval=3
+separator=false
+
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+[mediaplayer]
+instance=spotify
+interval=5
+signal=10
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=MEM
+label=
 separator=false
 interval=60
 
@@ -54,9 +64,10 @@ interval=60
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=HOME
+label=
 #instance=/mnt/data
 interval=120
+separator=false
 
 # Network interface monitoring
 #
@@ -64,7 +75,7 @@ interval=120
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#00FF00
+color=#9CBA7F
 interval=10
 separator=false
 
@@ -75,20 +86,20 @@ separator=false
 
 [bandwidth]
 #instance=eth0
-interval=5
+interval=2
+separator=false
 
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [cpu_usage]
-label=CPU
-interval=10
-min_width=CPU: 100.00%
-#separator=false
+label=
+interval=2
+# min_width=: 100.00%
 
-[load_average]
-interval=10
+# [load_average]
+# interval=10
 
 # Battery indicator
 #
@@ -104,15 +115,6 @@ interval=30
 [time]
 command=date '+%d-%m-%Y %H:%M:%S'
 interval=5
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
 
 # OpenVPN support
 #
