--- a/wm/i3blocks.conf
+++ b/wm/i3blocks.conf
@@ -75,7 +75,7 @@ separator=false
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#9CBA7F
+color=#b8bb26
 interval=10
 separator=false
 
