fix typo in pkg name

--- a/arch-pkgs/charlesvdv-dev/PKGBUILD
+++ b/arch-pkgs/charlesvdv-dev/PKGBUILD
@@ -52,7 +52,7 @@ depends=(
     'pkg-config'
     'python'
     'python-language-server'
-    'python-maccabe'
+    'python-mccabe'
     'python-pip'
     'python-pycodestyle'
     'python-pyflakes'
