--- a/wm/compton.conf
+++ b/wm/compton.conf
@@ -1,3 +1,8 @@
+backend = "glx";
+paint-on-overlay = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+
 shadow = false;
 inactive-dim = 0.25;
 inactive-dim-fixed = true;
