--- a/wm/i3blocks.conf
+++ b/wm/i3blocks.conf
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
+command=/usr/share/i3blocks-contrib/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -34,29 +34,26 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-#label=VOL
-label=♪
+label=VOL
+#label=♪
 instance=Master
 #instance=PCM
-interval=3
-separator=false
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-instance=spotify
-interval=5
+interval=once
 signal=10
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=
+label=MEM
 separator=false
-interval=60
+interval=30
+
+[memory]
+label=SWAP
+instance=swap
+separator=false
+interval=30
 
 # Disk usage
 #
@@ -64,10 +61,9 @@ interval=60
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=
+label=HOME
 #instance=/mnt/data
-interval=120
-separator=false
+interval=30
 
 # Network interface monitoring
 #
@@ -75,7 +71,7 @@ separator=false
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#b8bb26
+color=#00FF00
 interval=10
 separator=false
 
@@ -86,35 +82,44 @@ separator=false
 
 [bandwidth]
 #instance=eth0
-interval=2
-separator=false
+interval=5
 
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [cpu_usage]
-label=
-interval=2
-# min_width=: 100.00%
+label=CPU
+interval=10
+min_width=CPU: 100.00%
+#separator=false
 
-# [load_average]
-# interval=10
+#[load_average]
+#interval=10
 
 # Battery indicator
 #
 # The battery instance defaults to 0.
 [battery]
-#label=BAT
-label=⚡
+label=BAT
+#label=⚡
 #instance=1
 interval=30
 
 # Date Time
 #
 [time]
-command=date '+%d-%m-%Y %H:%M:%S'
+command=date '+%Y-%m-%d %H:%M:%S'
 interval=5
+
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+#[mediaplayer]
+#instance=spotify
+#interval=5
+#signal=10
 
 # OpenVPN support
 #
