fix ansible bug

--- a/debian-ansible/roles/gui/tasks/i3.yml
+++ b/debian-ansible/roles/gui/tasks/i3.yml
@@ -31,6 +31,6 @@
   file:
     path: /home/{{ username }}/Pictures/screenshots
     state: directory
-    owner: {{ username }}
-    group: {{ username }}
+    owner: "{{ username }}"
+    group: "{{ username }}"
     recurse: yes
